fixed image spacing

--- a/static/images/css/styles.css
+++ b/static/images/css/styles.css
@@ -7,7 +7,7 @@
     overflow: hidden; /* Clips image to the circle */
   }
   .circle-image img {
-    width: 100%;
+    width: inherit;
     height: auto;
     display: block;
   }
